# magneton

./: .readthedocs.yaml  README.md  __init__.py  config.yaml  main.py  pyproject.toml  requirements.txt  setup.py
docs/source/: about.md  conf.py
docs/source/_static/: ins3.tif
docs/source/tutorials/: ins.md
instance_segmentation/: __init__.py  config.py  main.py  waterz_block.py
instance_segmentation/configs/: config.yaml
instance_segmentation/stages/: __init__.py  merge_apply.py  merge_apply_hpc.py  merge_pools.py  merge_pools_hpc.py  merge_stage.py  segmentation_stage.py  segmentation_stage_hpc.py
instance_segmentation/state/: __init__.py  checkpoint.py
instance_segmentation/tools/: __init__.py  run_local_shard.py
instance_segmentation/utils/: __init__.py  block_utils.py  interrupts.py  io_utils.py  meta_utils.py  relabel_utils.py
jobs/merge/: submit_slurm.sh
jobs/merge/logs/: merge_880089_0.err  merge_880089_0.out
jobs/pytc/: submit_slurm.sh
jobs/pytc/logs/: pytc_878565_0.err  pytc_878565_1.err  pytc_878565_2.err  pytc_878565_3.err  pytc_879280_0.err  pytc_879385_0.err  pytc_879385_0.out  pytc_879414_0.err  pytc_879693_0.err  pytc_879770_0.err  pytc_879770_0.out  pytc_879856_0.out  pytc_879856_1.out  pytc_879856_10.out  pytc_879856_11.out  pytc_879856_12.out  pytc_879856_13.out  pytc_879856_14.out  pytc_879856_15.out  pytc_879856_2.out  pytc_879856_3.err  pytc_879856_3.out  pytc_879856_4.out  pytc_879856_5.out  pytc_879856_6.out  pytc_879856_7.out  pytc_879856_8.out  pytc_879856_9.out
jobs/split/: submit_slurm.sh
pytorch_connectomics/: __init__.py  main.py
pytorch_connectomics/configs/: hpc.yaml
pytorch_connectomics/scripts/: main_mutil.py
pytorch_connectomics/tools/: __init__.py  run.py  run_hpc.py  vis.py
pytorch_connectomics/utils/: __init__.py  config.py
toolkit/: __init__.py  main.py
toolkit/configs/: config_downsample.yaml  config_merge.yaml  config_prec.yaml  config_resize_tif.yaml  config_split.yaml
toolkit/configs_with_note/: config_downsample.yaml  config_gen_mask.yaml  config_mask.yaml  config_mask_tif.yaml  config_merge.yaml  config_prec.yaml  config_resize_tif.yaml  config_split.yaml.tmp
toolkit/tools/: __init__.py  convert_prec.py  convert_prec_hpc.py  downsample_prec.py  downsample_prec_hpc.py  gen_mask.py  gen_mask_hpc.py  mask_prec.py  mask_prec_hpc.py  mask_tif.py  mask_tif_hpc.py  merge.py  merge_hpc.py  resize_tif.py  resize_tif_hpc.py  split.py  split_hpc.py
toolkit/utils/: config.py
waterz/: pyproject.toml
(+105 files in other folders)
