[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "cython>=0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "magneton"
version = "0.1.0"
description = "Magneton: EM connectomics toolkit"
authors = [{ name = "Zhen Zhang", email = "zhen.zhang.zz545@yale.edu" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["magneton*"]
